Add Native EMI compat + fix JEI bug with removing compressed recipes