@@ -19,11 +19,8 @@
 package thedarkcolour.exdeorum.compat.jei;
 
 import com.google.common.collect.ImmutableList;
-import com.google.gson.JsonObject;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.recipe.RecipeIngredientRole;
-import net.minecraft.ChatFormatting;
-import net.minecraft.advancements.critereon.StatePropertiesPredicate;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.network.chat.Component;
 import net.minecraft.tags.TagKey;
@@ -33,8 +30,8 @@ import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import org.jetbrains.annotations.Nullable;
+import thedarkcolour.exdeorum.compat.XeiUtil;
 import thedarkcolour.exdeorum.recipe.BlockPredicate;
-import thedarkcolour.exdeorum.recipe.CodecUtil;
 import thedarkcolour.exdeorum.recipe.crook.CrookRecipe;
 
 import java.util.ArrayList;
@@ -101,16 +98,7 @@ public sealed abstract class CrookJeiRecipe {
 
             this.itemIngredients = itemIngredients.build();
 
-            ImmutableList.Builder<Component> requirements = ImmutableList.builder();
-            if (predicate != null) {
-                var json = CodecUtil.encode(StatePropertiesPredicate.CODEC, predicate.properties());
-                if (json instanceof JsonObject obj) {
-                    for (var entry : obj.entrySet()) {
-                        requirements.add(Component.literal("  " + entry.getKey() + "=" + entry.getValue().toString()).withStyle(ChatFormatting.GRAY));
-                    }
-                }
-            }
-            this.requirements = requirements.build();
+            this.requirements = XeiUtil.getStateRequirements(predicate);
         }
 
         @Override
@@ -134,7 +122,7 @@ public sealed abstract class CrookJeiRecipe {
         private final ItemStack itemIngredient;
 
         BlockRecipe(Block block, ItemStack result, float chance) {
-            super(List.of(block.defaultBlockState()), result, chance);
+            super(ImmutableList.of(block.defaultBlockState()), result, chance);
 
             var item = block.asItem();
             if (item == Items.AIR) {
